[tool.poetry]
name = "entity_gym"
version = "0.1.0"
description = "Entity Gym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
ragged-buffer = "^0.3.1"
msgpack = "^1.0.3"
msgpack-numpy = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
