[tool.poetry]
name = "entity_gym"
version = "0.1.0"
description = "Entity Gym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
ragged-buffer = "^0.3.9"
msgpack = "^1.0.3"
msgpack-numpy = "^0.4.7"
cloudpickle = "^2.0.0"
tqdm = "^4.63.1"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
