[tool.poetry]
name = "entity-gym"
version = "0.1.8"
description = "Entity Gym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
ragged-buffer = "^0.4.3"
msgpack = "^1.0.3"
msgpack-numpy = "^0.4.7"
cloudpickle = "^2.0.0"
tqdm = "^4.63.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.5.0"
autoapi = "^2.0.1"
pytest = "^7.1.2"
pre-commit = "^2.19.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
